# EasyAgent

./: .gitignore  LICENSE  README.md  README_CN.md  README_EN.md  pyproject.toml  requirements.txt
agent/: base.py  react_agent.py  tool_agent.py
config/: base.py  config.yaml  config_example.yaml
debug/: log.py
memory/: __init__.py  base.py  sliding_window.py  summary.py
model/: base.py  litellm_model.py
pipeline/: base.py
prompt/: __init__.py  memory.py  react.py
test/: test_agent.py  test_log_save.py  test_model.py
tool/: __init__.py  base.py  manager.py
